[package]
name = "example"
version = "0.1.0"
authors = ["slbb <7777777yzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simanneal = { path = ".." }
rand = "0.8.0"
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"